syntax = "proto3";

option csharp_namespace = "UserService.Grpc";

service UserProfileService {
    // Fetch full user profile snapshot
    rpc GetUserProfile (GetUserProfileRequest) returns (UserProfileResponse);
}

// ---- Requests ----
message GetUserProfileRequest {
    int32 userId = 1;
}

// ---- Responses ----
message UserProfileResponse {
    int32 userId = 1;
    string name = 2;
    string email = 3;
    
}
